--- a/TodoList/angular-todolist/src/app/components/pages/about/about.component.html
+++ b/TodoList/angular-todolist/src/app/components/pages/about/about.component.html
@@ -1,4 +1,4 @@
 <div>
-  <h1>About</h1>
+  <app-header></app-header>
   <p>This is the TodoList app v1.0.0. It is part of a Angular crash course</p>
 </div>
